--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<head>
+    <title>kayo</title>
+    <link rel="canonical" href="index.html" />
+    <meta charSet="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#2b2d31" />
+    <meta name="description" content="discord bot..." />
+    <meta name="og:title" content="kayo" />
+    <meta name="og:description" content="discord bot..." />
+    <meta property="og:url" content="/" />
+    <meta property="og:site_name" content="kayo.sh" />
+</head>
                <div class="links"> <a href="https://kayo.sh/discord" target="_blank">discord</a> <a href="https://kayo.sh/commands" target="_blank">cmds</a></div>
