--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <title>kayo</title>
+    <link rel="shortcut icon" href="https://images-ext-1.discordapp.net/external/Fw8hJzXFgBzly8g-Dbwm-2xkxdOPiQDeXKt2rDufR_Y/%3Fsize%3D512/https/cdn.discordapp.com/avatars/889543335994359859/0adf8557440c47a07e9a244ad6c84c0a.png?format=webp&quality=lossless&width=190&height=190"/>
     <link rel="canonical" href="index.html" />
     <meta charSet="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
