--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <title>kayo</title>
-    <link rel="shortcut icon" href="https://images-ext-1.discordapp.net/external/Fw8hJzXFgBzly8g-Dbwm-2xkxdOPiQDeXKt2rDufR_Y/%3Fsize%3D512/https/cdn.discordapp.com/avatars/889543335994359859/0adf8557440c47a07e9a244ad6c84c0a.png?format=webp&quality=lossless&width=190&height=190"/>
+    <link rel="shortcut icon" href="https://images-ext-2.discordapp.net/external/91d5Sr4nUolQ9ALcjfZAusLCmGNK_MLnWXNHFxWWgyA/https/wock.sh/kayo.png?format=webp&quality=lossless&width=449&height=449"/>
     <link rel="canonical" href="index.html" />
     <meta charSet="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -9,6 +9,7 @@
     <meta name="og:title" content="kayo" />
     <meta name="og:description" content="discord bot..." />
     <meta property="og:url" content="/" />
+    <meta property="og:image" content="https://images-ext-2.discordapp.net/external/91d5Sr4nUolQ9ALcjfZAusLCmGNK_MLnWXNHFxWWgyA/https/wock.sh/kayo.png?format=webp&quality=lossless&width=449&height=449"/>
     <meta property="og:site_name" content="kayo.sh" />
 </head>
                <div class="links"> <a href="https://kayo.sh/discord" target="_blank">discord</a> <a href="https://kayo.sh/commands" target="_blank">cmds</a></div>
