--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <title>kayo</title>
-    <link rel="shortcut icon" href=https://media.discordapp.net/attachments/1075599671919116389/1181883954274508840/kayo.png?ex=6582ae35&is=65703935&hm=756c9df79ef0ab9cdfb5ab5cf0803240b40b8327268c0295cc43388fe1cb1862&=&format=webp&quality=lossless&width=449&height=449"/>
+    <link rel="shortcut icon" href="https://media.discordapp.net/attachments/1075599671919116389/1182498778989744128/kayo.png?ex=6584eace&is=657275ce&hm=4b0a9980f3b423ab103b8a34e77be27ce19f08748cd52afe6ec4bb36272717b7&=&format=webp&quality=lossless&width=452&height=446"/>
     <link rel="canonical" href="index.html" />
     <meta charSet="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -9,7 +9,7 @@
     <meta name="og:title" content="kayo" />
     <meta name="og:description" content="discord bot..." />
     <meta property="og:url" content="/" />
-    <meta property="og:image" content="https://media.discordapp.net/attachments/1075599671919116389/1181883954274508840/kayo.png?ex=6582ae35&is=65703935&hm=756c9df79ef0ab9cdfb5ab5cf0803240b40b8327268c0295cc43388fe1cb1862&=&format=webp&quality=lossless&width=449&height=449"/>
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1075599671919116389/1182498778989744128/kayo.png?ex=6584eace&is=657275ce&hm=4b0a9980f3b423ab103b8a34e77be27ce19f08748cd52afe6ec4bb36272717b7&=&format=webp&quality=lossless&width=452&height=446"/>
     <meta property="og:site_name" content="kayo.sh" />
 </head>
                <div class="links"> <a href="https://kayo.sh/discord" target="_blank">discord</a> <a href="https://kayo.sh/commands" target="_blank">cmds</a></div>
