--- a/commands.html
+++ b/commands.html
@@ -8,7 +8,6 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#2b2d31" />
-    <meta name="keywords" content="kayo, discord, bot" />
     <meta name="author" content="wnm210" />
     <meta name="og:title" content="kayo / commands" />
     <meta name="og:description" content="discord bot..." />
@@ -17,6 +16,7 @@
         href="https://media.discordapp.net/attachments/1075599671919116389/1182498778989744128/kayo.png?ex=6584eace&is=657275ce&hm=4b0a9980f3b423ab103b8a34e77be27ce19f08748cd52afe6ec4bb36272717b7&=&format=webp&quality=lossless&width=452&height=446" />
     <meta property="og:image"
         content="https://media.discordapp.net/attachments/1075599671919116389/1182498778989744128/kayo.png?ex=6584eace&is=657275ce&hm=4b0a9980f3b423ab103b8a34e77be27ce19f08748cd52afe6ec4bb36272717b7&=&format=webp&quality=lossless&width=452&height=446" />
+    <meta property="og:site_name" content="kayo.sh" />
 </head>
 
 <body>
