--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#2b2d31" />
     <meta name="description" content="discord bot..." />
-    <meta name="og:title" content="kayo" />
+    <meta name="og:title" content="KAYO" />
     <meta name="og:description" content="discord bot..." />
     <meta property="og:url" content="/" />
     <meta property="og:image" content="https://media.discordapp.net/attachments/1075599671919116389/1182498778989744128/kayo.png?ex=6584eace&is=657275ce&hm=4b0a9980f3b423ab103b8a34e77be27ce19f08748cd52afe6ec4bb36272717b7&=&format=webp&quality=lossless&width=452&height=446"/>
